--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Testing Index Page</title>
     </head>
     <body>
+        <div>Git Hub is bae</div>
         <h1>Testing Heading</h1>
     </body>
 </html>
